# hero

./: .bazelrc  .dev_docker_name  .gitignore  .gitmodules  BUGS.md  BUILD  NOTES_egomotion_calibration_bug.md  README.md  WORKSPACE  notes.txt  pyproject.toml  transfer_hf_to_oci.py
.claude/: settings.local.json
build_wds/: requirements.txt
code_as_a_reward/: ABSTRACT.md  __init__.py  coc_claim_parser.py  coc_claim_parser_test.py  commitment_verifier.py  commitment_verifier_test.py  notes.txt  obstacle_tracks.py  obstacle_tracks_test.py  perceptual_verifier.py  perceptual_verifier_test.py  trace_reward.py  trace_reward_test.py
counterfactual/: counterfactual.py  fetch_from_logs.py  render_examples.py  render_examples_test.py  report.py  report_test.py  run.py  run_test.py
docker/: Dockerfile  build.sh  in_docker.sh  lilypad_aliases.sh  run.sh
lilypad/: launch.py
lockfiles/: BUILD  generate_lockfiles.py  requirements_lock.txt  resolve_lockfile.bzl
logs/: masking_cot_cluster_2zc7nf_logs.csv  notes.txt
masking/: BUILD  __init__.py  bootstrap.py  counterfactual_tokens.py  masked_model.py  requirements.txt  requirements_build_wds.txt  terms. txt
mnist/: BUILD  config.py  model.py
perplexity/: __init__.py  cluster_data.py  cluster_worker.py  compare_discrete_continuous.py  dump_input_template.py  ood_sample_manifest.json  plot_discrete_vs_diffusion.py  requirements.txt  s3_clip_loader.py  sample_diffusion_traj.py  sample_discrete_traj.py  sample_ood_clips.py  sample_scenario_clips.py  score.py  test_sample_discrete_traj.py  test_score.py  test_traj_tokenizer.py  traj_tokenizer.py
pref_pairs/: BUILD  __init__.py  action_space_variance.py  action_space_variance_test.py  build_clean_reasoning_actions.py  build_clean_reasoning_actions_test.py  build_ground_truth_action_dataset.py  build_ground_truth_action_dataset_test.py  build_reasoning_matched_pairs.py  build_reasoning_matched_pairs_test.py  classify_maneuvers.py  classify_maneuvers_test.py  fetch_from_logs.py  fetch_from_logs_test.py  fixed_reasoning_rollout.py  judge_reasoning_pairs.py  judge_reasoning_pairs_test.py  maneuver_report.py  maneuver_report_test.py  noise_floor_report.py  noise_floor_report_test.py  perturbation_generator.py  perturbation_generator_test.py  pref.txt  render_trajectory_overlay.py  render_trajectory_overlay_test.py  requirements.txt  rollout_harvester.py  trajectory_features.py  (+5 more)
(+489 files in other folders)
